tests/miz/pass/types/pass_type_elaboration_chained_local_mode_asserted_head_001.miz
definition
  mode BaseModeAssertedHeadDef: BaseModeAssertedHead is set;
end;

definition
  mode ChainModeAssertedHeadDef: ChainModeAssertedHead is BaseModeAssertedHead;
end;

reserve x for ChainModeAssertedHead;
theorem ChainedLocalModeAssertedHeadPayloadBoundary: x is ChainModeAssertedHead;
