tests/miz/fail/types/fail_type_elaboration_local_mode_chain_dependency_attributed_expansion_gap_001.miz
definition
  let x be set;
  attr MarkedModeDef: x is marked means thesis;
end;

definition
  mode BaseModeDef: BaseMode is set;
end;

definition
  mode ChainModeDef: ChainMode is BaseMode;
end;

reserve x for ChainMode;
reserve y for marked BaseMode;
